--- a/Server/package.json
+++ b/Server/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node server.js"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/GoPro16/PersonalWebsite#readme",
   "dependencies": {
+    "async": "^2.1.4",
     "body-parser": "^1.16.0",
+    "cassandra-driver": "^3.2.0",
     "express": "^4.14.1"
   }
 }
