--- a/Server/package.json
+++ b/Server/package.json
@@ -20,7 +20,10 @@
   "dependencies": {
     "async": "^2.1.4",
     "body-parser": "^1.16.0",
-    "cassandra-driver": "^3.2.0",
-    "express": "^4.14.1"
+    "express": "^4.14.1",
+    "fs": "0.0.1-security",
+    "mysql": "^2.13.0",
+    "path": "^0.12.7",
+    "sequelize": "^3.30.2"
   }
 }
