--- a/hoc/package.json
+++ b/hoc/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "babel-preset-stage-1": "^6.1.18",
+    "cookies-js": "^1.2.2",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^3.10.1",
     "react": "^0.14.3",
@@ -41,7 +42,7 @@
     "react-router": "^2.0.0",
     "redux": "^3.0.4",
     "redux-thunk": "^2.1.0",
-    "validator": "^6.1.0",
-    "cookies-js": "^1.2.2"
+    "svg-react-loader": "^0.3.7",
+    "validator": "^6.1.0"
   }
 }
