--- a/package.json
+++ b/package.json
@@ -49,12 +49,14 @@
     "core-decorators": "^0.19.0",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^3.10.1",
+    "material-ui": "^0.18.3",
     "moment": "^2.18.1",
-    "react": "^0.14.3",
+    "react": "^15.4.0",
     "react-bootstrap": "^0.30.8",
-    "react-dom": "^0.14.3",
+    "react-dom": "^15.4.0",
     "react-redux": "^4.0.0",
     "react-router": "^2.0.0",
+    "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.0.4",
     "redux-actions": "^2.0.3",
     "redux-thunk": "^2.1.0",
