--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,28 +1,66 @@
+
 {
+    "extends": "airbnb",
+    "parser":"babel-eslint",
     "env": {
-        "browser": true,
-        "commonjs": true,
-        "es6": true,
-        "node": true
+      "es6":true,
+      "browser": true,
+      "node": true
     },
+    "plugins": [
+      "react"
+    ],
     "parserOptions": {
-        "ecmaFeatures": {
-            "jsx": true
-        },
-        "sourceType": "module"
+      "ecmaVersion": 6,
+      "sourceType": "module",
+      "experimentalDecorators":true,
+      "ecmaFeatures": {
+        "experimentalObjectRestSpread": true
+      }
     },
     "rules": {
-        "no-const-assign": "warn",
-        "no-this-before-super": "warn",
-        "no-undef": "warn",
-        "no-unreachable": "warn",
-        "no-unused-vars": "warn",
-        "constructor-super": "warn",
-        "valid-typeof": "warn",
-        "no-invalid-regexp": "warn",
-        "dot-notation": "warn",
-        "no-delete-var": "error",
-        "block-spacing": ["warn", "always"],
-        "quotes": ["warn", "single"]
+      "import/no-extraneous-dependencies":0,
+      "import/first":0,
+      "import/order":2,
+      "import/no-unresolved":0,
+      "import/extensions":["off","never"],
+      "indent":[
+        "warn",
+        4,
+        {
+          "SwitchCase":1
+        }
+      ],
+      "react/jsx-indent":["warn",4],
+      "react/jsx-index-props":["warn",4],
+      "no-underscore-dangle":0,
+      "comma-dangle":[
+        "error",
+        {
+          "extentions":[".js"]
+        }
+      ],
+      "max-len":["warn",200],
+      "func-names":0,
+      "no-console":"warn",
+      "react/jsx-filename-extensions":[
+        1,
+        {
+          "extensions":[".js"]
+        }
+      ],
+      "react-forbid-prop-types":0,
+      "jsx-a11y/imge-has-alt":0,
+      "jsx-a11y/no-static-element-interactions":0,
+      "jsx-a11y-label-has-for":0,
+      "no-magic-numbers":0,
+      "linebreak-style":[0,"unix"],
+      "react/prop-types":0,
+      "react/no-array-index-key":0,
+      "arrow-body-style":[
+        "warn",
+        "as-needed"
+      ],
+      "arrow-parens":0
     }
-}
+  }
