--- a/package.json
+++ b/package.json
@@ -1,58 +1,31 @@
 {
   "name": "floridaframing",
   "version": "1.0.0",
-  "description": "Website for Florida Framing Supplies",
+  "description": "Personal Website",
+  "website": "volleycode.com",
   "main": "index.js",
-  "scripts": {
-    "start": "webpack-dev-server",
-    "build": "webpack --config webpack.config.js"
-  },
-  "repository": {
-  },
+  "repository": {},
   "devDependencies": {
-    "babel-core": "^6.18.2",
-    "babel-loader": "^6.2.7",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-preset-es2015": "^6.1.18",
-    "babel-preset-react": "^6.1.18",
-    "chai": "^3.5.0",
-    "chai-jquery": "^2.0.0",
-    "component-directory-webpack-plugin": "^1.0.5",
-    "css-loader": "^0.25.0",
-    "file-loader": "^0.9.0",
-    "jquery": "^2.2.1",
-    "jsdom": "^8.1.0",
-    "mocha": "^2.4.5",
-    "node-sass": "^3.11.2",
-    "react-addons-test-utils": "^0.14.7",
-    "sass-loader": "^4.0.2",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.8",
-    "webpack": "^2.1.0-beta.22",
-    "webpack-dev-server": "^1.16.5"
+    "eslint-config-airbnb": "^16.1.0",
+    "jest": "^23.6.0",
+    "react-app-rewire-hot-loader": "^1.0.1",
+    "react-app-rewire-scss": "^1.0.2",
+    "react-app-rewired": "^1.5.2",
+    "react-test-renderer": "^16.7.0-alpha.2"
   },
   "dependencies": {
-    "babel-preset-stage-1": "^6.1.18",
-    "build-bundle": "^2.0.8",
-    "classnames": "^2.2.5",
-    "cookies-js": "^1.2.2",
-    "core-decorators": "^0.19.0",
-    "isomorphic-fetch": "^2.2.1",
-    "lodash": "^3.10.1",
-    "moment": "^2.18.1",
-    "react": "^15.6.1",
-    "react-addons-test-utils": "^15.6.0",
-    "react-dom": "^15.6.1",
-    "react-redux": "^4.0.0",
-    "react-router": "^2.0.0",
-    "react-router-dom": "^4.1.2",
-    "redux": "^3.0.4",
-    "redux-actions": "^2.0.3",
-    "redux-thunk": "^2.1.0",
-    "validator": "^6.1.0",
-    "webpack": "~2.6.1",
-    "webpack-dev-server": "~2.4.5"
+    "bulma": "^0.7.2",
+    "react": "^16.7.0-alpha.2",
+    "react-dom": "^16.7.0-alpha.2",
+    "react-hot-loader": "^4.1.1",
+    "react-scripts": "1.1.4"
   },
-  "author": "Kyle Gray & Michael Turner",
+  "scripts": {
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test --env=jsdom",
+    "eject": "react-scripts eject"
+  },
+  "author": "Kyle Gray",
   "license": "ISC"
 }
