--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-test-renderer": "^16.7.0-alpha.2"
   },
   "dependencies": {
+    "animate.css": "^3.7.0",
     "bulma": "^0.7.2",
     "react": "^16.7.0-alpha.2",
     "react-dom": "^16.7.0-alpha.2",
